# pane-fm

./: .SRCINFO  .gitignore  CLAUDE.md  LICENSE  PKGBUILD  README.md  ROADMAP.md  TODO.md  biome.json  package.json
.github/workflows/: aur-publish.yml  release.yml
scripts/: sync-icons.ts
src/: app.css  app.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  config.rs  default-config.toml  error.rs  fs_ops.rs  lib.rs  main.rs  progress.rs
src-tauri/src/commands/: apps.rs  archive.rs  config.rs  drives.rs  file_ops.rs  mod.rs  search.rs  theme.rs  trash.rs  watcher.rs
src-tauri/themes/: catppuccin-mocha.css  dark-minimal.css  nord.css
src/lib/: commandRegistry.ts  commands.ts  constants.ts  contextMenu.ts  errors.ts  fileOps.ts  highlight.ts  highlightWorker.ts  icons.ts  keybinds.ts  previewCache.ts  previewManager.svelte.ts  transitions.ts  utils.ts
src/lib/components/: Breadcrumb.svelte  BusyOverlay.svelte  CommandPalette.svelte  CompressDialog.svelte  ConfirmDialog.svelte  ContextMenu.svelte  FileGrid.svelte  FileIcon.svelte  FileList.svelte  FilterBar.svelte  FolderPicker.svelte  HelpDialog.svelte  PreviewPanel.svelte  PropertiesDialog.svelte  SearchOverlay.svelte  Sidebar.svelte  StatusBar.svelte  TabBar.svelte  Toolbar.svelte  fileEditLogic.svelte.ts
src/lib/stores/: dialogs.svelte.ts  fileManager.svelte.ts  tabs.svelte.ts
src/routes/: +page.svelte
