[package]
name = "pane-fm"
version = "0.1.6"
description = "A themeable file manager built with Tauri and Svelte"
authors = ["you"]
edition = "2021"

[lib]
name = "pane_fm_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
trash = "5"
chrono = { version = "0.4", features = ["serde"] }
mime_guess = "2"
infer = "0.19"
dirs = "6"
tokio = { version = "1", features = ["rt"] }
zip = { version = "4", default-features = false, features = ["deflate"] }
flate2 = "1"
tar = "0.4"
toml = "0.8"
notify = "7"
tauri-plugin-drag = "2.1.0"
image = { version = "0.25", default-features = false, features = ["png", "jpeg", "gif", "webp", "avif", "bmp"] }
shlex = "1"
pdf_oxide = "0.3"

[dev-dependencies]
tempfile = "3"
